--- a/computer-configurator-web/src/Components/Categories/Categories.css
+++ b/computer-configurator-web/src/Components/Categories/Categories.css
@@ -1,3 +1,10 @@
+.allCategoriesLink {
+  display: flex;
+  justify-content: center;
+  margin: 2rem;
+  text-decoration: underline;
+}
+
 .categoryGrid {
   display: grid;
   justify-items: center;
@@ -5,7 +12,7 @@
   grid-template-columns: repeat(auto-fill, minmax(6rem, 1fr));
 }
 
-.card {
+.categoryCard {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,13 +23,13 @@
   border: darkgray solid 1px;
 }
 
-.card img {
+.categoryCard img {
   width: 100%;
   height: 100%;
   border: darkred solid 1px;
 }
 
-.card h3 {
+.categoryCard h3 {
   text-align: center;
   word-wrap: break-word;
   margin: 0;
