--- a/computer-configurator-web/src/index.css
+++ b/computer-configurator-web/src/index.css
@@ -1,66 +1,64 @@
 :root {
-  /* global theme */
-  --primaryColor: #3a3a3a;
-  --primaryTextColor: #9a9a9a;
+	/* global theme */
+	--primaryColor: #3a3a3a;
+	--primaryTextColor: #9a9a9a;
 
-  --secondaryColor: #6a6a6a;
-  --secondaryTextColor: #1a1a1a;
+	--secondaryColor: #6a6a6a;
+	--secondaryTextColor: #1a1a1a;
 
-  --tertiaryColor: #9a9a9a;
-  --tertiaryTextColor: #000000;
+	--tertiaryColor: #9a9a9a;
+	--tertiaryTextColor: #000000;
 
-  --failure: #c02020;
-  --success: #25c020;
+	--failure: #c02020;
+	--success: #25c020;
 
-  --shadowColor: #000000;
+	--shadowColor: #000000;
 }
 
 body {
-  margin: 0;
-  /* fill the viewport width*/
-  width: 100vw;
-  /* fill the viewport height*/
-  min-height: 100vh;
-  background-color: var(--primaryColor);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+	margin: 0;
+	/* fill the viewport width*/
+	width: 100vw;
+	/* fill the viewport height*/
+	min-height: 100vh;
+	background-color: var(--primaryColor);
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
 h1 {
-  font-size: 1.4rem;
-  font-weight: 500;
-  color: var(--primaryTextColor);
+	font-size: 1.4rem;
+	font-weight: 500;
+	color: var(--primaryTextColor);
 }
 
 h2 {
-  font-size: 1.2rem;
-  font-weight: 500;
-  color: var(--primaryTextColor);
+	font-size: 1.2rem;
+	font-weight: 500;
+	color: var(--primaryTextColor);
 }
 
 h3 {
-  font-size: 1rem;
-  font-weight: 500;
-  color: var(--primaryTextColor);
+	font-size: 1rem;
+	font-weight: 500;
+	color: var(--primaryTextColor);
 }
 
 a {
-  text-decoration: none;
-  font-weight: 500;
-  color: var(--primaryTextColor);
+	text-decoration: none;
+	font-weight: 500;
+	color: var(--primaryTextColor);
 }
 
 p {
-  font-size: 0.8rem;
-  font-weight: 400;
-  color: var(--primaryTextColor);
+	font-size: 0.8rem;
+	font-weight: 400;
+	color: var(--primaryTextColor);
 }
 
 div.content {
-  /* space from header and its shadow */
-  padding-top: 2rem;
-  padding-right: 0.6rem;
-  padding-bottom: 0.6rem;
-  padding-left: 0.6rem;
+	/* space from header and its shadow */
+	padding-top: 2rem;
+	padding-right: 0.6rem;
+	padding-bottom: 0.6rem;
+	padding-left: 0.6rem;
 }
