--- a/computer-configurator-web/src/index.css
+++ b/computer-configurator-web/src/index.css
@@ -5,9 +5,9 @@
 	--primaryTextColor: 154, 154, 154;
 
 	--secondaryColor: 106, 106, 106;
-	--secondaryTextColor: 26, 26, 26;
+	--secondaryTextColor: 220, 220, 220;
 
-	--tertiaryColor: 154, 154, 154;
+	--tertiaryColor: 255, 145, 0;
 	--tertiaryTextColor: 0, 0, 0;
 
 	--failure: 192, 32, 32;
@@ -24,6 +24,15 @@ body {
 	min-height: 100vh;
 	background-color: rgba(var(--primaryColor), 1);
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+}
+
+.content {
+	/* space from header and its shadow */
+	padding-top: 2rem;
+	padding-right: 0.6rem;
+	padding-bottom: 0.6rem;
+	padding-left: 0.6rem;
+	height: 80vh;
 }
 
 h1 {
@@ -62,10 +71,43 @@ p {
 	color: rgba(var(--primaryTextColor), 1);
 }
 
-.content {
-	/* space from header and its shadow */
-	padding-top: 2rem;
-	padding-right: 0.6rem;
-	padding-bottom: 0.6rem;
-	padding-left: 0.6rem;
+p.subtext {
+	font-size: 0.7rem;
+	font-weight: 400;
+	color: rgba(var(--primaryTextColor), 1);
+}
+
+label {
+	font-size: 0.8rem;
+	font-weight: 400;
+	color: rgba(var(--primaryTextColor), 1);
+}
+
+input[type="checkbox"] {
+	/* space from label */
+	margin-right: 0.5rem;
+	outline: rgba(var(--tertiaryColor), 1) 1px solid;
+	/*background color currently does not apply;
+	leaving here for when it is supported*/
+	background-color: rgba(var(--tertiaryColor), 1);
+}
+
+button {
+	transition: background-color 0.25s;
+	background-color: rgba(var(--tertiaryColor), 0.8);
+
+	border: none;
+	border-radius: 0.3rem;
+
+	padding-top: 0.3rem;
+	padding-right: 1rem;
+	padding-bottom: 0.3rem;
+	padding-left: 1rem;
+
+	box-shadow: 0 4px 6px -1px rgba(var(--shadowColor), 1);
+}
+
+button:hover {
+	transition: background-color 0.25s;
+	background-color: rgba(var(--tertiaryColor), 1);
 }
